# deeplearning-thesis

./: .gitignore  .gitmodules  LICENSE  README.md  abalone.cabal  cabal.sandbox.config  deeplearning.cabal  index.html  makefile  params.json
abapro/: ABA-PRO.HLP  ABA-PRO.cnt  NACRE-ABAPRO Game3.ABA
data-good/: player_game_list_breakthrough_DavidScott.txt  player_game_list_breakthrough_MojmirHanes.txt  player_game_list_breakthrough_MojoRising.txt  player_game_list_breakthrough_RayGarrison.txt  player_game_list_breakthrough_Stop Sign.txt  player_game_list_breakthrough_StopSign.txt  player_game_list_breakthrough_edbonnet.txt  player_game_list_breakthrough_halladba.txt  player_game_list_breakthrough_kyledouglas.txt  player_game_list_breakthrough_vic.txt  player_game_list_breakthrough_wanderer_c.txt
docs/: doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Z.html  doc-index.html  index-frames.html  index.html
docs/deeplearning/: Agent.html  AgentGeneric.html  Board.html  BreakthroughGame.html  CommonDatatypes.html  Config.html  Constraints.html  ConstraintsGA.html  ConstraintsGeneric.html  GenericGame.html  GenericGameExperiments.html  HistogramGeneric.html  LittleGolem.html  MCTS.html  Matlab.html  MinimalGA.html  MinimalNN.html  NNBoard.html  NeuralNets.html  ThreadLocal.html  Tournament.html  Utils.html  deeplearning.haddock  doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  (+31 more)
grid-2.0/: grid.cabal
grid-2.0/src/Math/Geometry/: GridInternal.hs  GridMap.hs
gui/: LICENSE  Procfile  breakthrough-gui.cabal  breakthrough-gui.hs  cabal-dev  make-heroku-release.sh
gui/hooks/: build.sh  finish.sh  start.sh
gui/pvp/static/: index.html
gui/static/: global-index.html  index.html
lib/: Agent.hs  AgentGeneric.hs  AgentGenericHeuristic.hs  Board.hs  BreakthroughGame.hs  CairoRender.hs  CommonDatatypes.hs  Config.hs  Constraints.hs  ConstraintsGA.hs  ConstraintsGeneric.hs  GameTreeSearch.hs  GenericGame.hs  GenericGameExperiments.hs  GraphNN.hs  HistogramGeneric.hs  LittleGolem.hs  MCTS.hs  Matlab.hs  MinimalGA.hs  MinimalNN.hs  MonteCarloTS.hs  MyVectorType.hs  NNBoard.hs  NeuralNets.hs  SVG.hs  Simulation.hs  THUtils.hs  Test.hs  TestBoards.hs  ThreadLocal.hs  Tournament.hs  TournamentGeneric.hs  Utils.hs
matlab/: nnsave_to_file.m  nnsave_to_file_full.m  run.m  run_trainer.m  run_trainer_ll.m
src/: abalone.hs  breakthrough-driver.hs  constraints-single-random-neuron.hs  dbn-converter.hs  dense-to-sparse.hs  doctests.hs  experiment-cli.hs  experiment-progress-email-reporter.hs  get-finished-games.hs  gg-exp1.hs  gg-exp10.hs  gg-exp11.hs  gg-exp2.hs  gg-exp3.hs  gg-exp4.hs  gg-exp5.hs  gg-exp6.hs  gg-exp7.hs  gg-exp8.hs  gg-exp9.hs  histograms-printer.hs  nn-benchmark.hs  repr-nn-benchmark.hs  standalone-dbn-evaluator.hs  tmux-capture-all-panes-ggexp.sh  tournament.hs  trace-games.hs  verify-minimalnn.hs
utils/: bootstrap-ghc.sh
yesod/abaloney/: Application.hs  Foundation.hs  abaloney.cabal  cabal-dev  devel.hs  nn.txt
yesod/abaloney/Handler/: Board.hs  BoardRender.hs  Breakthrough.hs  Foo.hs  Home.hs
yesod/abaloney/config/: keter.yaml  routes  settings.yml
yesod/abaloney/deploy/: Procfile
yesod/abaloney/templates/: board.hamlet  breakthrough.hamlet  homepage.hamlet
