Name:                abalone
Version:             0.1
-- Synopsis:            
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Krzysztof Skrzętnicki
Maintainer:          gtener@gmail.com
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.8

Flag cairo
  description: Enable Cairo-based svg functionality
  default: True

Flag hnn02
  description: Use newer version of hnn library
  default: True

Library
  Hs-source-dirs:         lib
  Exposed-modules:        Board, Agent, CairoRender, Simulation, 
                          MonteCarloTS, CommonDatatypes, NeuralNets,
                          Tournament, Utils
  Build-depends:          base, mwc-random, grid, process, containers, hashmap, game-tree, split, hashable == 1.2.0.2.20121217, data-default
  if flag(cairo)
     build-depends: cairo
     cpp-options: -DCAIRO
  if flag(hnn02)
     build-depends: hnn == 0.2.0.0.20121217, vector
     cpp-options: -DNEWHNN
  else
     build-depends: hnn == 0.1.2.3.4

  Ghc-options:            -rtsopts -fprof-auto -fprof-auto-top -Wall -rtsopts -threaded -O2

Executable abalone
  Main-is:                src/abalone.hs
  Build-depends:          base, abalone, clocked, async, time, process
  Ghc-options:            -rtsopts -fprof-auto -fprof-auto-top -Wall -threaded

Executable tournament
  Main-is:                src/tournament.hs
  Build-depends:          base, abalone, data-default
  Ghc-options:            -rtsopts -fprof-auto -fprof-auto-top -Wall -threaded

Executable dense-to-sparse
  Main-is:                src/dense-to-sparse.hs
  Build-depends:          base, filepath
  Ghc-options:            -rtsopts

Executable get-finished-games
  Main-is:                src/get-finished-games.hs
  Build-depends:          base, filepath, abalone
  Ghc-options:            -rtsopts

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       src/doctests.hs
  build-depends: base, doctest >= 0.8
