Name:                abalone
Version:             0.1
-- Synopsis:            
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Krzysztof Skrzętnicki
Maintainer:          gtener@gmail.com
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.8

Flag cairo
  description: Enable Cairo-based svg functionality
  default: True

Library
  Hs-source-dirs:         lib
  Exposed-modules:        Board, Agent, CairoRender, Simulation, 
                          MonteCarloTS, CommonDatatypes, NeuralNets,
                          Tournament, Utils, MinimalNN, Constraints,
                          Config, Matlab,
                          GenericGame, AgentGeneric, BreakthroughGame, HistogramGeneric,
                          GenericGameExperiments, ConstraintsGeneric, ThreadLocal,
                          LittleGolem
  Build-depends:          base, mwc-random, grid == 2.0, process, containers, hashmap, game-tree, split, 
--                        hashable == 1.2.0.2.20121217, -- with removed hashable instance for pair...
                          hashable, 
--                        hnn == 0.2.0.0.20121218, 
                          vector, hmatrix, io-memoize, cairo, data-default, async,
                          global-config, filepath, directory, transformers, global-variables, Interpolation,
                          bytestring, Histogram, gnuplot, zlib, chronograph, attoparsec, text
--  if flag(cairo)
--     build-depends: cairo
  cpp-options: -DCAIRO
  Ghc-options:            -rtsopts -fprof-auto -fprof-auto-top -Wall -rtsopts -threaded -Werror

Executable abalone
  Main-is:                src/abalone.hs
  Build-depends:          base, abalone, async, time, process
  Ghc-options:            -rtsopts -fprof-auto -fprof-auto-top -Wall -threaded

Executable trace-games
  Main-is:                src/trace-games.hs
  Build-depends:          base, abalone, async, time, process
  Ghc-options:            -rtsopts -fprof-auto -fprof-auto-top -Wall -threaded

Executable tournament
  Main-is:                src/tournament.hs
  Build-depends:          base, abalone, data-default
  Ghc-options:            -rtsopts -fprof-auto -fprof-auto-top -Wall -threaded

Executable constraints-single-random-neuron
  Main-is:                src/constraints-single-random-neuron.hs
  Build-depends:          base, abalone, async
  Ghc-options:            -rtsopts -fprof-auto -fprof-auto-top -Wall -threaded

Executable dense-to-sparse
  Main-is:                src/dense-to-sparse.hs
  Build-depends:          base, filepath
  Ghc-options:            -rtsopts

Executable breakthrough-driver
  Main-is:                src/breakthrough-driver.hs
  Build-depends:          base, abalone, async, data-default
  Ghc-options:            -rtsopts -threaded

Executable histograms-printer
  Main-is:                src/histograms-printer.hs
  Build-depends:          base, abalone, async, data-default
  Ghc-options:            -rtsopts

Executable gg-exp1
  Main-is:                src/gg-exp1.hs
  Build-depends:          base, abalone, async, data-default
  Ghc-options:            -rtsopts

Executable gg-exp2
  Main-is:                src/gg-exp2.hs
  Build-depends:          base, abalone, async, data-default
  Ghc-options:            -rtsopts

Executable gg-exp3
  Main-is:                src/gg-exp3.hs
  Build-depends:          base, abalone, async, data-timeout, directory, chronograph, data-default, text
  Ghc-options:            -rtsopts -threaded -Wall

Executable gg-exp4
  Main-is:                src/gg-exp4.hs
  Build-depends:          base, abalone 
  Ghc-options:            -rtsopts -threaded -Wall


-- Executable nn-benchmark-01
--   Main-is:                src/nn-benchmark.hs
--   Build-depends:          base, filepath, criterion, mwc-random, vector, hnn == 0.1
--   Ghc-options:            -rtsopts -O2
--   buildable:              False
--   cpp-options:            -DBENCH01
--  
-- Executable nn-benchmark-02
--   Main-is:                src/nn-benchmark.hs
--   Build-depends:          base, filepath, criterion, mwc-random, vector, hnn == 0.2.0.0.20121218
--   Ghc-options:            -rtsopts -O2
--   buildable:              False
--   cpp-options:            -DBENCH02

-- Executable nn-benchmark-03
--   Main-is:                src/nn-benchmark.hs
--   Build-depends:          base, abalone, filepath, criterion == 0.6.2.0, mwc-random, vector, split, hmatrix, HaskellNN == 0.1.3, hnn == 0.2.0.0.20121218
--   Ghc-options:            -rtsopts -O2
--   buildable:              True
--   cpp-options:            -DBENCH03

--   if flag(bench01)
--      build-depends: hnn == 0.1
--      cpp-options: -DBENCH01
--      buildable: True
--   if flag(bench02)
--      build-depends: hnn == 0.2.0.0.20121218
--      cpp-options: -DBENCH02
--      buildable: True
--   if flag(bench03)
--      build-depends: HaskellNN
--      cpp-options: -DBENCH03
--      buildable: True

Executable get-finished-games
  Main-is:                src/get-finished-games.hs
  Build-depends:          base, filepath, abalone
  Ghc-options:            -rtsopts

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       src/doctests.hs
  build-depends: base, doctest >= 0.8
