name:                deeplearning
version:             0.2
license:             BSD3
license-file:        LICENSE
author:              Krzysztof Skrzętnicki
maintainer:          gtener@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.8

flag matlab
  description:  build Matlab/Octave based functionality
  default:      False

flag build-experiments
  description:  build various executables
  default:      False

flag build-utils
  description:  build utility executables
  default:      False

flag abalone
  description:  build code for Abalone game 
  default:      False

-- flag accelerate
--   description:  build code requiring Accelerate
--   default:      False

flag vector-hmatrix
  description:  use hmatrix-based implementation of vector/matrix ops
  default:      False

flag vector-vector
  description:  use vector-based implementation of vector/matrix ops
  default:      True

-- flag vector-dph
--   description:  use dph-based implementation of vector/matrix ops
--   default:      False

flag vector-ddot
  description:  use cblas_ddot-based implementation of vector/matrix ops (use together with -fvector-vector)
  default:      False
  

library
  hs-source-dirs:         lib
  exposed-modules:        NeuralNets, Utils, MinimalNN, GraphNN, Config, 
                          GenericGame, AgentGeneric, BreakthroughGame, HistogramGeneric,
                          ConstraintsGeneric, ThreadLocal,
                          LittleGolem, MinimalGA, MCTS, MyVectorType
  build-depends:          base, mwc-random, process, containers, hashmap, game-tree, split, 
                          hashable == 1.2.0.4, 
                          vector, io-memoize, data-default, async, 
                          global-config, filepath, directory, transformers, 
                          bytestring, Histogram, gnuplot, zlib, chronograph, attoparsec, text, time, old-locale, 
                          GA, random, array, deepseq, data-timeout, binary, ghc-prim
  ghc-options:            -Wall -feager-blackholing 
  extensions:             RankNTypes, FlexibleContexts 
  if os(windows)
     cpp-options:         -DWINDOWS
  else
     build-depends:       unix

  -- configurable functionality
  if flag(vector-vector)
     build-depends:       vector-binary-instances
     cpp-options:         -DVECTOR_VECTOR
  
  if flag(vector-vector) && flag(vector-ddot)
     extra-libraries:     gsl gslcblas m
--     extra-lib-dirs:      /usr/lib
--     ld-options:          ddot.o
--     ld-options:          -lgslcblas
     extensions:          ForeignFunctionInterface
     cpp-options:         -DVECTOR_DDOT
     

  if flag(vector-hmatrix)
     build-depends:       hmatrix
     cpp-options:         -DVECTOR_HMATRIX

--  if flag(vector-dph)
--     build-depends:       dph-base, dph-prim-par, dph-lifted-vseg
--     cpp-options:         -DVECTOR_DPH

  -- optional functionality

  if flag(abalone)
     build-depends:       grid == 2.*, global-variables
     exposed-modules:     CommonDatatypes, Constraints, Board, Tournament, Agent, NNBoard

  if flag(matlab)
     build-depends:       Interpolation
     exposed-modules:     Matlab, GenericGameExperiments, ConstraintsGA

--  if flag(accelerate)
--     build-depends:       accelerate, accelerate-cuda, accelerate-io
--     exposed-modules:     ConstraintsAccelerate

-- Executable abalone
--   Main-is:                src/abalone.hs
--   Build-depends:          base, deeplearning, async, time, process
--   Ghc-options:            -rtsopts -fprof-auto -fprof-auto-top -Wall -threaded
--  
-- Executable trace-games
--   Main-is:                src/trace-games.hs
--   Build-depends:          base, deeplearning, async, time, process
--   Ghc-options:            -rtsopts -fprof-auto -fprof-auto-top -Wall -threaded
--  
-- Executable tournament
--   Main-is:                src/tournament.hs
--   Build-depends:          base, deeplearning, data-default
--   Ghc-options:            -rtsopts -fprof-auto -fprof-auto-top -Wall -threaded
--  
-- Executable constraints-single-random-neuron
--   Main-is:                src/constraints-single-random-neuron.hs
--   Build-depends:          base, deeplearning, async
--   Ghc-options:            -rtsopts -fprof-auto -fprof-auto-top -Wall -threaded
--  
-- Executable dense-to-sparse
--   Main-is:                src/dense-to-sparse.hs
--   Build-depends:          base, filepath
--   Ghc-options:            -rtsopts
--  
-- Executable breakthrough-driver
--   Main-is:                src/breakthrough-driver.hs
--   Build-depends:          base, deeplearning, async, data-default
--   Ghc-options:            -rtsopts -threaded
--  
-- Executable histograms-printer
--   Main-is:                src/histograms-printer.hs
--   Build-depends:          base, deeplearning, async, data-default
--   Ghc-options:            -rtsopts
--  
-- Executable gg-exp1
--   Main-is:                src/gg-exp1.hs
--   Build-depends:          base, deeplearning, async, data-default
--   Ghc-options:            -rtsopts
--  
-- Executable gg-exp2
--   Main-is:                src/gg-exp2.hs
--   Build-depends:          base, deeplearning, async, data-default
--   Ghc-options:            -rtsopts
--  
Executable gg-exp3
  Main-is:                src/gg-exp3.hs
  Build-depends:          base, deeplearning, async, data-timeout, directory, chronograph, data-default, text, deepseq, parallel, uglymemo
  Ghc-options:            -rtsopts -threaded -Wall  -feager-blackholing
  if flag(build-experiments) && flag(matlab)
    Buildable:            True
  else
    Buildable:            False
  
--  
-- Executable gg-exp4
--   Main-is:                src/gg-exp4.hs
--   Build-depends:          base, deeplearning 
--   Ghc-options:            -rtsopts -threaded -Wall
--  

Executable gg-exp5
  Main-is:                src/gg-exp5.hs
  Build-depends:          base, deeplearning, data-timeout, data-default, parallel, deepseq, async, filepath, directory
  Ghc-options:            -rtsopts -threaded -Wall -O2  -feager-blackholing
  if flag(build-experiments) && flag(matlab)
    Buildable:            True
  else
    Buildable:            False

Executable gg-exp6
  Main-is:                src/gg-exp6.hs
  Build-depends:          base, deeplearning, data-timeout, data-default, parallel, deepseq, async, filepath, directory
  Ghc-options:            -rtsopts -threaded -Wall -O2  -feager-blackholing
  if flag(build-experiments) && flag(matlab)
    Buildable:            True
  else
    Buildable:            False

Executable gg-exp7
  Main-is:                src/gg-exp7.hs
  Build-depends:          base, deeplearning, data-timeout, data-default, parallel, deepseq, async, filepath, directory
  Ghc-options:            -rtsopts -threaded -Wall -O2  -feager-blackholing
  if flag(build-experiments) && flag(matlab)
    Buildable:            True
  else
    Buildable:            False


Executable experiment-progress-email-reporter
  Main-is:                src/experiment-progress-email-reporter.hs
  Build-depends:          base, blaze-html, mime-mail, filepath, directory, process, text
  if flag(build-utils)
    Buildable:            True
  else
    Buildable:            False

Executable standalone-dbn-evaluator
  Main-is:                src/standalone-dbn-evaluator.hs
  Build-depends:          base, deeplearning
  Ghc-options:            -rtsopts -threaded -Wall -O2  -feager-blackholing
  if flag(build-utils) && flag(matlab)
    Buildable:            True
  else
    Buildable:            False

Executable dbn-converter
  Main-is:                src/dbn-converter.hs
  Build-depends:          base, deeplearning, hmatrix, directory, filepath, binary, ghc-prim
  if flag(build-utils)
    Buildable:            True
  else
    Buildable:            False


--  
-- -- Executable repr-benchmark
-- --   Main-is:                src/repr-nn-benchmark.hs
-- --   Build-depends:          base, deeplearning, filepath, criterion, hmatrix, hashmap
-- --   Ghc-options:            -rtsopts -O2
--  
--  
-- -- Executable nn-benchmark-01
-- --   Main-is:                src/nn-benchmark.hs
-- --   Build-depends:          base, filepath, criterion, mwc-random, vector, hnn == 0.1
-- --   Ghc-options:            -rtsopts -O2
-- --   buildable:              False
-- --   cpp-options:            -DBENCH01
-- --  
-- -- Executable nn-benchmark-02
-- --   Main-is:                src/nn-benchmark.hs
-- --   Build-depends:          base, filepath, criterion, mwc-random, vector, hnn == 0.2.0.0.20121218
-- --   Ghc-options:            -rtsopts -O2
-- --   buildable:              False
-- --   cpp-options:            -DBENCH02
--  
-- -- Executable nn-benchmark-03
-- --   Main-is:                src/nn-benchmark.hs
-- --   Build-depends:          base, deeplearning, filepath, criterion == 0.6.2.0, mwc-random, vector, split, hmatrix, HaskellNN == 0.1.3, hnn == 0.2.0.0.20121218
-- --   Ghc-options:            -rtsopts -O2
-- --   buildable:              True
-- --   cpp-options:            -DBENCH03
--  
-- --   if flag(bench01)
-- --      build-depends: hnn == 0.1
-- --      cpp-options: -DBENCH01
-- --      buildable: True
-- --   if flag(bench02)
-- --      build-depends: hnn == 0.2.0.0.20121218
-- --      cpp-options: -DBENCH02
-- --      buildable: True
-- --   if flag(bench03)
-- --      build-depends: HaskellNN
-- --      cpp-options: -DBENCH03
-- --      buildable: True
--  
-- Executable get-finished-games
--   Main-is:                src/get-finished-games.hs
--   Build-depends:          base, filepath, deeplearning
--   Ghc-options:            -rtsopts
--  
-- test-suite doctests
--   type:          exitcode-stdio-1.0
--   ghc-options:   -threaded
--   main-is:       src/doctests.hs
--   build-depends: base, doctest >= 0.8
