name:                breakthrough-gui
version:             0.1.0.0
synopsis:            GUI for Breakthrough game
homepage:            https://github.com/Tener/deeplearning-thesis
license:             BSD3
license-file:        LICENSE
author:              Krzysztof Skrzętnicki
maintainer:          gtener@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:  Procfile
                     package.json
                     static/jquery-json.js
                     static/jquery.js
                     static/index.html
                     prepared-sdists/deeplearning-0.2.tar.gz
                     hooks/start.sh
                     hooks/build.sh
                     hooks/finish.sh
                     assets/dbn.bin

executable breakthrough-gui
  main-is:           breakthrough-gui.hs
  build-depends:     base, null-canvas == 0.2.7, array, deeplearning, hashmap, text, binary
  ghc-options:       -rtsopts -Wall -feager-blackholing
